Update socket